--- a/index.html
+++ b/index.html
@@ -8,22 +8,22 @@
 <body>
     <nav>
     <ul>
-        <li><a href="/">Home</a><li>
-        <li><a href="/about">About</a><li>
-        <li><a href="/cv">CV</a>CV<li>
-        <li><a href="/blog">Blog</a><li>
+        <li><a href="/">Home</a></li>
+        <li><a href="/about">About</a></li>
+        <li><a href="/cv">CV</a></li>
+        <li><a href="/blog">Blog</a></li>
     </ul>
         </nav>
 		    <div class="container">
     		    <div class="blurb">
         		    <h1>J'aime la viande</h1>
-				    <p>Mais les vaches et les cochons aussi<em>Weird.</em> Don't trust me. <a href="/about">More about my life...</a></p>
+				    <p>Mais les vaches et les cochons aussi<em>. Weird.</em> Don't trust me. <a href="/about">More about my life...</a></p>
     		    </div><!-- /.blurb -->
 		    </div><!-- /.container -->
         <footer>
     		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+        		<li><a href="mailto:RoscaS@gmail.com">email</a></li>
+        		<li><a href="https://github.com/RoscaS">github.com/RoscaS</a></li>
 			</ul>
 	    </footer>
 </body>
