--- a/index.html
+++ b/index.html
@@ -1,40 +1,8 @@
-<!<!DOCTYPE>
-<html>
-    <head>
-        <title> Use a pointer ! </title>
-	<link rel="stylesheet" type="text/css" href="css/main.css">
-    </head>
-</html>
-<body>
-    <nav>
-    <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="/about">About</a></li>
-        <li><a href="/cv">CV</a></li>
-        <li><a href="/blog">Blog</a></li>
-    </ul>
-        </nav>
-		    <div class="container">
-    		    <div class="blurb">
-        		    <h1>J'aime la viande</h1>
-				    <p>Mais les vaches et les cochons aussi<em>. Weird.</em> Don't trust me. <a href="/about">More about my life...</a></p>
-    		    </div><!-- /.blurb -->
-		    </div><!-- /.container -->
-        <footer>
-    		<ul>
-        		<li><a href="mailto:RoscaS@gmail.com">email</a></li>
-        		<li><a href="https://github.com/RoscaS">github.com/RoscaS</a></li>
-			</ul>
-	    </footer>
-</body>
-</html>
-
-
-
-
-
-
-
-
-
-</body>
+---
+layout: default
+title: RoscaS. Aime la viande et les animaux !
+---
+<div class="blurb">
+	<h1>RoscaS. Aime la viande et les animaux !</h1>
+	<p> <em>Weird...</em> Don't trust me. <a href="/about"> More about my life...</a></p>
+</div><!-- /.blurb -->
