--- a/index.html
+++ b/index.html
@@ -5,4 +5,4 @@ title: RoscaS. Aime la viande et les animaux !
 <div class="blurb">
 	<h1>RoscaS. Aime la viande et les animaux !</h1>
 	<p> <em>Weird...</em> Don't trust me. <a href="/about"> More about my life...</a></p>
-</div><!-- /.blurb -->
+</div>
