--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 ---
 layout: default
-title: Hank Quinlan, Horrible Cop
+title: RoscaS. Aime la viande et les animaux !
 ---
-
-		<div class="blurb">
-			<h1>Hi there, I'm Hank Quinlan!</h1>
-			<p>I'm best known as the horrible cop from <em>A Touch of Evil</em>. Don't trust me. <a href="/about">Read more about my life...</a></p>
-		</div> 
+<div class="blurb">
+	<h1>RoscaS. Aime la viande et les animaux !</h1>
+	<p> <em>Weird...</em> Don't trust me. <a href="/about"> More about my life...</a></p>
+</div>
